--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -7,5 +7,5 @@ WORKDIR /frontend
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 #EXPOSE 5000
-#COPY .. .
+COPY .. .
 CMD ["python", "app.py"]
