--- a/.gitignore
+++ b/.gitignore
@@ -136,4 +136,4 @@ cid_secr.*
 /spotify_beta.txt
 /app/backend/.cache-n4k48jxrs6lu7wbmfb1dshbgm
 /app/backend/genius_key.py
-config.py
+/app/backend/config.py
