--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -4,8 +4,8 @@ spotipy~=2.18.0
 marshmallow_sqlalchemy~=0.25.0
 Flask-SQLAlchemy~=2.5.1
 SQLAlchemy~=1.4.13
-validate_email
-validators
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
+validate_email==1.3
+validators==0.18.2
+google_api_python_client==2.9.0
+google_auth_oauthlib==0.4.4
+cryptography==3.4.7
